fix inter / font awesome iconns having different size / alignment

--- a/home/modules/hyprland/waybar/waybar.css
+++ b/home/modules/hyprland/waybar/waybar.css
@@ -84,6 +84,11 @@ button {
     margin: 4px;
     padding: 2px;
     font-size: 40px;
+
+    line-height: 40px;
+    /*display: inline-flex;*/
+    align-items: center;
+    vertical-align: middle;
 }
 
 #workspaces button.active {
